--- a/index.html
+++ b/index.html
@@ -1,44 +1,121 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>HOME</title>
-        <link rel="stylesheet" type="text/css" href="index.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <body>
-       <nav>
-        <label class="logo">PROFILE</label>
-        <ul>
-            <li><a href="./index.html">HOME</a></li>
-            <li><a href="./about.html">ABOUT</a></li>
-            <li><a href="./projects.html">PROJECTS</a></li>
-       </ul> 
-       </nav>
-       <div class="b1">
-        <div class="profile">
-            <img src="./images/profile.jpg" alt="Image">
-        </div>
-        <div class="profTxt">
-            <p>Hi, Yash Here.</p>
-            <div class="intro">I am a Mobile Application Developer. I can work on Java, Kotlin, swift. I am also used to with MySQL, MongoDB.</div>
-        </div>
-       </div>
-       <div class="b2">
-            <div>
-                <p id="m1">More About Mobile Application Development:</p>
-                <div class="desMDEV">
-                    <q> Mobile application development is very intersting field. In this field, you have variety of opportunities. Other than that, You can work on multiple technologies. There is a concept called as Cross platform development in which we can develope a single application for both mobile platforms Android and iOS. With the help of React Native, we can implement cross development concept. </q>
+<html lang="en">
+<head>
+  <title>Landing Page</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link href="style1.css" rel="stylesheet">
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light navbar-default" style="padding: 7px 30px 7px 30px; background-color: rgb(112, 199, 240);">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a href="./index.html"><img src="./images/logo.png" style="float: left; width:110px;margin: 7px 40px 0 80px;"></a>
+          </div>
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          <div class="collapse navbar-collapse" id="myNavbar">
+              <ul class="nav navbar-nav mr-auto">
+                  <div class="d-flex">
+                    <li class="nav-link nav-font ">
+                        <a class="nav-link nav-font active" href="./index.html">Home</a>
+                    </li>
+                    <li class="nav-link nav-font">
+                        <a class="nav-link nav-font" href="./2.html">Development</a>
+                    </li>
                 </div>
-            </div>
-       </div>
-       <div class="footer">
-        <p class="contact">Contact Me:</p>
-        <a href="https://www.linkedin.com/in/yash-patel-b72b14200/" class="fa fa-linkedin"></a>
-        <a href="https://www.facebook.com/profile.php?id=100009995178187" class="fa fa-facebook"></a>
-        <a href="https://twitter.com/NilPate25626840" class="fa fa-twitter"></a>
-        <a href="https://github.com/YaxPatel25" class="fa fa-github"></a>
-        <a href="mailto:200505489@student.georgianc.on.ca" class="fa fa-envelope"></a>
-       </div>
-    </body>
+              </ul>
+          </div>
+        </div>
+      </nav>
+
+      <div style="animation-delay: 0.5s;margin-top: 14%;">
+        <h1 class="w3-container w3-center w3-animate-bottom">We are Shovler.</h1>
+        <p class="w3-center w3-animate-top">We are team of five.</p>
+      </div>
+
+      <br><br><br><br><br><br>
+
+      <div style="margin: 0 10px 0 20px; width: 97%;" class="line"></div>
+
+      <div style="animation-delay: 0.5s;margin-top: 2%;">
+        <h1 class="w3-container w3-center w3-animate-fading">UI:</h1>
+      </div>
+
+      <br><br>
+
+      <!-- 1 -->
+      <div class="container" style="border: 3px black solid; padding: 40px 0 40px 60px;background-color: aquamarine;margin-bottom: 30px;">
+        <div class="row">
+          <div class="col">
+            <img src="./images/login.jpg" style="width: 200px;">
+          </div>
+          <div class="col">
+            <h2 style="text-decoration: underline; font-size: 3.3em;">Login Screen</h2>
+            <p style="margin: 50px 0 0 -200px">- This screen ask credentials to user to enter in app. Also, they can login with Google or Facebook account.  </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- 2 -->
+      <div class="container" style="border: 3px black solid; padding: 40px 20px 40px 250px;background-color: aquamarine;margin-bottom: 30px;">
+        <div class="row">
+          <div class="col">
+            <h2 style="text-decoration: underline; font-size: 3.3em;">Register Screen</h2>
+            <p style="margin: 50px 0px 0 -200px">- This is allow new user to create a new account. </p>
+          </div>
+          <div class="col">
+            <img src="./images/register.jpg" style="width: 200px;margin-left: 185px;">
+          </div>
+        </div>
+      </div>
+
+      <!-- 3 -->
+      <div class="container" style="border: 3px black solid; padding: 40px 0 40px 60px;background-color: aquamarine;margin-bottom: 30px;">
+        <div class="row">
+          <div class="col">
+            <img src="./images/home.jpg" style="width: 200px;">
+          </div>
+          <div class="col">
+            <h2 style="text-decoration: underline; font-size: 3.3em;">Home Screen</h2>
+            <p style="margin: 50px 0 0 -200px">- This is the main screen of the app. This screen shows the listed advertisements. this screen allow shoveler to choose any of the advertisements. </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- 4 -->
+      <div class="container" style="border: 3px black solid; padding: 40px 20px 40px 220px;background-color: aquamarine;margin-bottom: 30px;">
+        <div class="row">
+          <div class="col">
+            <h2 style="text-decoration: underline; font-size: 3em;">Advertisment Screen</h2>
+            <p style="margin: 50px 0px 0 -200px">- This screen comes after home screen. Shovler can make an advertisement in this screen. </p>
+          </div>
+          <div class="col">
+            <img src="./images/advertisment.jpg" style="width: 200px;margin-left: 185px;">
+          </div>
+        </div>
+      </div>
+
+      <!-- 5 -->
+      <div class="container" style="border: 3px black solid; padding: 40px 0 40px 60px;background-color: aquamarine;margin-bottom: 30px;">
+        <div class="row">
+          <div class="col">
+            <img src="./images/adlisting.jpg" style="width: 200px;">
+          </div>
+          <div class="col">
+            <h2 style="text-decoration: underline; font-size: 3.3em;">Add Listing Screen</h2>
+            <p style="margin: 50px 0 0 -200px">- This screen helps to make a post. In this, user must enter his/her location, photos, etc. </p>
+          </div>
+        </div>
+      </div>
+      
+</body>
 </html>
